# Proyecto-Final

./: README.md
Proyecto/: CMakeLists.txt  main.cpp
Proyecto Final 2/: CMakeLists.txt  main.cpp
Proyecto Final 2/controller/: Combate.cpp  Combate.h
Proyecto Final 2/model/: Combatiente.cpp  Combatiente.h  Consumible.cpp  Consumible.h  Enemigo.cpp  Enemigo.h  Entidad.cpp  Entidad.h  Fragmento.h  Habitacion.cpp  Habitacion.h  Jefe.cpp  Jefe.h  Jugador.cpp  Jugador.h  Mapa.cpp  Mapa.h  NPC.cpp  NPC.h  Objeto.cpp  Objeto.h  mejora.cpp  mejora.h
Proyecto Final 2/view/: view.cpp  view.h
Proyecto/src/controller/: Controlador.cpp  Controlador.h
Proyecto/src/model/: Arma.h  Combatiente.cpp  Combatiente.h  Consumible.cpp  Consumible.h  Entidad.cpp  Entidad.h  FragmentoGema.h  Habitacion.cpp  Habitacion.h  Jefe.cpp  Jefe.h  JefeFinal.cpp  JefeFinal.h  JefeNormal.cpp  JefeNormal.h  Jugador.cpp  Jugador.h  Mapa.cpp  Mapa.h  NPC.cpp  NPC.h  Objeto.h
Proyecto/src/view/: vistaJuego.cpp  vistaJuego.h
